feat: 新增删除知识点接口
